[package]
name = "solana-trie"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
edition = "2021"
version = "0.0.0"

[dependencies]
bytemuck = { workspace = true, features = ["min_const_generics", "must_cast"] }
solana-program.workspace = true

lib = { workspace = true, features = ["solana-program"] }
memory.workspace = true
sealable-trie.workspace = true
stdx.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
