[package]
name = "restaking"
description = "Created with Anchor"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "restaking"

[features]
# added so that we can compile this along with `solana-ibc` with mocks features. Currently unused.
mocks = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
witness = []
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["metadata"] }
solana-ibc = { workspace = true, features = ["cpi"] }
solana-program.workspace = true

[dev-dependencies]
home = "=0.5.5"
