[package]
name = "solana-ibc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ibc"

[features]
default = ["custom-entrypoint", "custom-heap"]
cpi = ["no-entrypoint"]
custom-heap = ["solana-allocator"]
custom-entrypoint = ["custom-heap"]
mocks = ["ibc-testkit"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
base64.workspace = true
bytemuck = { workspace = true, features = ["must_cast", "zeroable_atomics"] }
derive_more.workspace = true
ibc-testkit = { workspace = true, optional = true }
ibc.workspace = true
ibc-proto.workspace = true
linear-map.workspace = true
primitive-types.workspace = true
tendermint.workspace = true
tendermint-proto.workspace = true
tendermint-light-client-verifier.workspace = true
serde.workspace = true
serde_json.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
strum.workspace = true
uint.workspace = true
prost.workspace = true  
hex-literal.workspace = true
sha2.workspace = true
itertools.workspace = true
ibc-client-tendermint-types.workspace = true

guestchain.workspace = true
cf-guest.workspace = true
lib = { workspace = true, features = ["solana-program"] }
memory.workspace = true
solana-allocator = { workspace = true, optional = true }
solana-signature-verifier = { workspace = true, features = ["guest", "library"] }
solana-trie.workspace = true
stdx.workspace = true
trie-ids = { workspace = true, features = ["borsh"] }
wasm = { workspace = true }
# ibc-testkit = { workspace = true, optional = true }

[dev-dependencies]
anchor-client.workspace = true
anyhow.workspace = true
hex-literal.workspace = true
insta.workspace = true

lib = { workspace = true, features = ["test_utils"] }
solana-write-account = { workspace = true, features = ["library"] }
