[package]
name = "solana-ibc"
description = "Created with Anchor"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ibc"

[features]
default = ["custom-entrypoint", "custom-heap"]
#default = ["custom-entrypoint", "custom-heap", "mocks"]
cpi = ["no-entrypoint"]
custom-heap = ["solana-allocator"]
custom-entrypoint = ["custom-heap"]
mocks = ["ibc-testkit"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
witness = [] # turn on for Mantis

[dependencies]
anchor-lang.workspace = true
anchor-spl = { workspace = true, features = ["metadata"] }
base64.workspace = true
bytemuck = { workspace = true, features = ["must_cast", "zeroable_atomics"] }
derive_more.workspace = true
hex-literal.workspace = true
ibc-client-tendermint-types.workspace = true
ibc-proto.workspace = true
ibc-testkit = { workspace = true, optional = true }
ibc.workspace = true
linear-map.workspace = true
primitive-types.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
strum.workspace = true
tendermint-light-client-verifier.workspace = true
tendermint.workspace = true
uint.workspace = true

guestchain.workspace = true
cf-guest.workspace = true
cf-solana = { workspace = true, features = ["solana-program", "no-blake3-syscall"] }
lib = { workspace = true, features = ["solana-program"] }
memory.workspace = true
solana-allocator = { workspace = true, optional = true }
solana-signature-verifier = { workspace = true, features = ["guest", "library"] }
solana-trie.workspace = true
stdx.workspace = true
trie-ids = { workspace = true, features = ["borsh"] }
wasm = { workspace = true }
itertools = "0.10.5"

[dev-dependencies]
anchor-client.workspace = true
anyhow.workspace = true
ibc-testkit.workspace = true
insta.workspace = true
env_logger = "0.7.1"
log = "0.4.22"

solana-rpc-client = { version = "1.17.31", features = [] }

lib = { workspace = true, features = ["test_utils"] }
solana-write-account = { workspace = true, features = ["library"] }
